# DnD

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Dice.h
src/: Dice.cpp
